--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -23,6 +23,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        haxelib install lime > /dev/null
         haxelib install utest > /dev/null
         haxelib install hxp > /dev/null
         haxelib run hxp --install-hxp-alias
