--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -27,7 +27,8 @@ jobs:
         haxelib install utest --quiet
         haxelib install hxp --quiet
         haxelib run hxp --install-hxp-alias
-        haxelib run lime setup -alias
+        haxelib run lime setup -alias -y
+        lime || alias lime="haxelib run lime"
 
     - name: Install "openfl" command alias
       run: |
