--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -32,13 +32,13 @@ jobs:
       run: |
         haxelib run openfl setup -alias -y
 
-    - name: Run unit tests
+    - name: Run tests
       run: |
-        hxp unit-test neko
+        hxp test
 
     - name: Notify Discord (success)
       uses: appleboy/discord-action@master
-      if: github.repository == github.event.pull_request.head.repo.full_name
+      if: github.event_name == "push" || github.repository == github.event.pull_request.head.repo.full_name
       with:
         webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
         webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
@@ -47,7 +47,7 @@ jobs:
 
     - name: Notify Discord (failure)
       uses: appleboy/discord-action@master
-      if: github.repository == github.event.pull_request.head.repo.full_name && failure()
+      if: failure() && (github.event_name == "push" || github.repository == github.event.pull_request.head.repo.full_name)
       with:
         webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
         webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
