--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -38,7 +38,7 @@ jobs:
 
     - name: Notify Discord (success)
       uses: appleboy/discord-action@master
-      if: github.event_name == "push" || github.repository == github.event.pull_request.head.repo.full_name
+      if: github.event_name == push || github.repository == github.event.pull_request.head.repo.full_name
       with:
         webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
         webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
@@ -47,7 +47,7 @@ jobs:
 
     - name: Notify Discord (failure)
       uses: appleboy/discord-action@master
-      if: failure() && (github.event_name == "push" || github.repository == github.event.pull_request.head.repo.full_name)
+      if: failure() && (github.event_name == push || github.repository == github.event.pull_request.head.repo.full_name)
       with:
         webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
         webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
