--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -36,21 +36,14 @@ jobs:
       run: |
         hxp test
 
-
-    - name: Notify Discord (success)
-      uses: appleboy/discord-action@master
-      if: github.event_name == 'push' || github.repository == github.event.pull_request.head.repo.full_name
-      with:
-        webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
-        webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
-        color: "#00C07F"
-        message: "https://github.com/openfl/openfl/actions/runs/${{ github.run_id }}\nUnit tests succeeded"
-
-    - name: Notify Discord (failure)
-      uses: appleboy/discord-action@master
-      if: failure() && (github.event_name == 'push' || github.repository == github.event.pull_request.head.repo.full_name)
-      with:
-        webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
-        webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
-        color: "#FF6562"
-        message: "https://github.com/openfl/openfl/actions/runs/${{ github.run_id }}\nUnit tests failed"
+ notify:
+    runs-on: ubuntu-16.04
+    needs: [build]
+    if: always()
+    steps:
+      - name: Notify Discord
+        uses: nobrayner/discord-webhook@v1
+        with:
+          github-token: ${{ secrets.github_token }}
+          discord-webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          include-details: 'false'
