--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,10 @@ on: [push, pull_request]
 jobs:
 
   unit-test:
+    strategy:
+      matrix:
+        haxe-version: [3.4.7, 4.1.5]
     runs-on: macos-10.15
-
     steps:
       - uses: actions/checkout@v1
         with:
@@ -13,7 +15,7 @@ jobs:
 
       - uses: krdlab/setup-haxe@v1
         with:
-          haxe-version: 4.1.5
+          haxe-version: ${{ matrix.haxe-version }}
 
       - name: Set HAXEPATH
         run: |
