--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
 
       - name: Install Haxe dependencies
         run: |
+          haxelib install hxcpp --quiet
+          haxelib install format --quiet
+          haxelib install hxp --quiet
           haxelib git lime https://github.com/haxelime/lime --quiet
           haxelib install utest --quiet
           haxelib install hxp --quiet
@@ -94,6 +97,9 @@ jobs:
 
       - name: Install Haxe dependencies
         run: |
+          haxelib install hxcpp --quiet
+          haxelib install format --quiet
+          haxelib install hxp --quiet
           haxelib git lime https://github.com/haxelime/lime --quiet
           haxelib install dox --quiet
           haxelib dev openfl $GITHUB_WORKSPACE
