--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
 
       - name: Install "openfl" command alias
         run: |
+          haxelib run lime rebuild tools -nocolor -verbose -nocffi
           haxelib run openfl setup -alias -y
 
       - name: Run tests
