--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
   unit-test:
     strategy:
       matrix:
-        haxe-version: [3.4.7, 4.1.5]
+        haxe-version: [4.1.5]
     runs-on: macos-10.15
     steps:
       - uses: actions/checkout@v1
