Github Actions: switch back to released Lime instead of Github Lime for now
Wait until after Haxe 3 support is restored in Lime (and probably until after refactoring of Lime)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           haxelib install hxcpp --quiet
           haxelib install format --quiet
           haxelib install hxp --quiet
-          haxelib git lime https://github.com/haxelime/lime --quiet
+          haxelib install lime --quiet
           haxelib install utest --quiet
 
       - name: Setup environment
@@ -99,7 +99,7 @@ jobs:
           haxelib install hxcpp --quiet
           haxelib install format --quiet
           haxelib install hxp --quiet
-          haxelib git lime https://github.com/haxelime/lime --quiet
+          haxelib install lime --quiet
           haxelib install dox --quiet
           haxelib dev openfl $GITHUB_WORKSPACE
 
